# reminder-bot

./: .editorconfig  .env.example  .gitignore  AI.md  COMPLETED.md  CONFIG.md  CONTRIBUTING.md  OPS.md  PROJECT.md  README.md  SECURITY.md  STATUS.md  TESTS.md  alembic.ini  check.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 20260204_0001_events_idempotency_indexes.py  2eb47063a061_add_jira_subscriptions.py  547505cfa855_tg_id_bigint.py  98f14b9ce731_create_users_and_reminders.py  f5c3cd383f5b_denormalize_events_fields.py
app/: __init__.py  db.py  models.py  ops_alert.py
app/bot/: handlers.py  jira_handlers.py  main.py  middlewares.py  states.py
app/config/: settings.py
app/repositories/: core_tasks_repository.py  jira_repository.py  reminder_repository.py  user_repository.py
app/services/: jira_service.py  reminder_service.py  user_service.py
app/utils/: datetime.py  time.py
app/worker/: core_task_notify_worker.py  jira_worker.py  runner.py  tasks.py
completed/: 2026-02-17_1553_spec-first-completed-check.md  2026-02-17_1939_fix-doc-links.md  2026-02-17_1952_consolidate-code-derived-docs.md  2026-02-19_0000_docs-hold-semantics.md  2026-02-19_0001_readme-docs-reviewed-stamp.md  2026-02-19_1342_outcome-delivery-delivery-attempts.md  2026-02-19_1415_delivery-trace-payload-retry-policy.md  2026-02-24_1753_implicit-ask-reply-ux.md  2026-02-25_1548_fix-tg-delivery-missing-text.md  2026-02-27_1215_tool_output_passthrough.md  2026-02-27_1301_pretty_json_and_file_delivery.md  2026-03-04_1847_fix-paging-purpose-filter.md  2026-03-04_1935_waiting-user-paging-and-txt-delivery.md  2026-03-06_1445_disable-tg-json-pruning.md  2026-03-06_1517_pretty-json-for-file-delivery.md  2026-03-06_1607_always_send_large_json_as_file.md  2026-03-17_0000_fridge-diet-scenario.md  2026-03-17_1441_fridge-add-multiword-names.md  2026-03-17_1450_fridge-unit-normalization.md  2026-03-17_1540_fridge-update-command.md  2026-03-17_1603_done-notify-fridge-fallback.md  README.md
docs/_code_derived/: README.md  config.md  how_it_works.md  improvements.md  interfaces.md  known_issues.md  operations.md  overview.md  roadmap.md
plans/: README.md  pr10_reminder-bot_core_ux_a7040fb5.plan.md  pr2_local-llm_bridge_(pull)_b5dfecb0.plan.md  step059_enable_codegen_result_telegram_notifications_f9c236a2.plan.md
scripts/: check_completed_note.sh
tests/: test_core_events_and_notify_worker.py
